# deltavision

./: .gitignore  .mcp.json  BUGS.md  CLAUDE.md  README.md  SESSION_SUMMARY.md  TESTS.md  TODO.md  config.py  dv_playwright_mcp.py  main.py  observer.py  pyproject.toml  requirements-local.txt  requirements.txt  safety.py  server.py
.github/: dependabot.yml
.playwright-mcp/: page-2026-04-17T14-16-55-770Z.yml  page-2026-04-17T14-17-31-535Z.yml  page-2026-04-17T14-17-47-690Z.yml  page-2026-04-17T14-20-21-889Z.yml  page-2026-04-17T14-21-05-894Z.yml  page-2026-04-17T14-21-27-732Z.yml  page-2026-04-17T14-22-10-749Z.yml  page-2026-04-17T14-22-35-288Z.yml  page-2026-04-17T14-23-33-526Z.yml  page-2026-04-17T14-23-45-582Z.yml  page-2026-04-17T14-23-51-607Z.yml  page-2026-04-17T14-24-01-173Z.yml  page-2026-04-17T16-10-22-872Z.yml  page-2026-04-17T16-10-43-636Z.yml  page-2026-04-17T16-11-30-009Z.yml  page-2026-04-17T16-11-58-956Z.yml  page-2026-04-17T16-12-23-580Z.yml  page-2026-04-17T16-12-31-887Z.yml  page-2026-04-17T16-12-57-980Z.yml  page-2026-04-17T16-13-37-611Z.yml  page-2026-04-17T16-14-07-168Z.yml  page-2026-04-17T16-29-25-641Z.yml  page-2026-04-17T16-30-12-854Z.yml  page-2026-04-17T16-30-32-258Z.yml  page-2026-04-17T16-31-29-715Z.yml  page-2026-04-17T16-31-36-770Z.yml  page-2026-04-17T16-31-39-895Z.yml  page-2026-04-17T16-31-43-393Z.yml  page-2026-04-17T16-32-19-133Z.yml  page-2026-04-17T16-32-29-444Z.yml  page-2026-04-17T16-32-39-249Z.yml  page-2026-04-17T16-33-01-291Z.yml  page-2026-04-17T16-33-25-351Z.yml  page-2026-04-17T16-54-23-035Z.yml  page-2026-04-17T16-54-34-024Z.yml  page-2026-04-17T16-54-39-826Z.yml  page-2026-04-17T16-54-43-440Z.yml  page-2026-04-17T16-54-55-312Z.yml  page-2026-04-17T16-55-02-706Z.yml  page-2026-04-17T16-55-07-939Z.yml  (+8 more)
agent/: __init__.py  actions.py  loop.py  state.py
bugs/: SCHEMA.md  _lib.py  add.py  log.jsonl  render.py  resolve.py
deltavision/: __init__.py  cli.py  selftest.py  verify_trace.py
dv_runs/: dv_proxy_run_1776664334.jsonl  dv_proxy_run_1776664350.jsonl  dv_proxy_run_1776664458.jsonl  dv_proxy_run_1776664582.jsonl  dv_proxy_run_1776664589.jsonl  dv_proxy_run_1776664593.jsonl  dv_proxy_run_1776665522.jsonl  dv_proxy_run_1776665526.jsonl  dv_proxy_run_1776665530.jsonl  dv_proxy_run_1776668874.jsonl  dv_proxy_run_1776716138.jsonl  dv_proxy_run_1776716289.jsonl  dv_proxy_run_1776721940.jsonl  dv_proxy_run_1776724044.jsonl  dv_proxy_run_1776727917.jsonl  dv_proxy_run_1776818593.jsonl  dv_proxy_run_1776819074.jsonl  dv_proxy_run_1776967879.jsonl  dv_proxy_run_1776979743.jsonl  dv_proxy_run_1776979745.jsonl  dv_proxy_run_1776979748.jsonl  dv_proxy_run_1776979762.jsonl  dv_proxy_run_1777061068.jsonl  dv_proxy_run_1777061073.jsonl  dv_proxy_run_1777065994.jsonl  dv_proxy_run_1777066001.jsonl  dv_proxy_run_1777066005.jsonl  (+26 more)
model/: __init__.py  (+7 more)
(+302 files in other folders)
