[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deltavision"
version = "1.0.0"
description = "Delta-first computer-use agent framework: observation-level gating with a zero-LLM CV pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "David Gao"}]
requires-python = ">=3.11"
keywords = ["computer-use", "vlm", "agent", "browser-automation", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # CV pipeline — the framework's core, all model-agnostic
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "imagehash>=4.3.1",

    # Browser automation
    "playwright>=1.40.0",

    # Environment config
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.25.0"]
openai = ["openai>=1.30.0"]  # also covers llama-server, vLLM, SGLang via base_url
ollama = ["httpx>=0.27.0"]
local = [
    # HuggingFace transformers backend. Heavy — only install if you need it.
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.45.0",
    "accelerate>=0.30.0",
    "qwen-vl-utils>=0.0.8",
    "bitsandbytes>=0.43.0",
]
all = [
    "deltavision[claude,openai,ollama]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ddavidgao/deltavision"
Repository = "https://github.com/ddavidgao/deltavision"
"Private (source of truth)" = "https://github.com/ddavidgao/deltavision-private"

[project.scripts]
deltavision = "main:cli_entry"

[tool.setuptools]
# Module layout: this is a flat repo, not src/. List packages explicitly to
# avoid setuptools auto-discovering test / benchmark dirs as installable.
packages = [
    "agent",
    "model",
    "observation",
    "vision",
    "results",
]
py-modules = ["config", "safety", "main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: requires network or browser (skipped by default in CI)",
    "slow: slow-running tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = [
    "E501",  # line-too-long; handled by formatter
    "B008",  # function call in argument defaults; we use this deliberately
]
